--- a/Frontend/css/childrenList.css
+++ b/Frontend/css/childrenList.css
@@ -59,34 +59,111 @@ header{
     margin-right: 2em;
 }
 
+li{
+    text-decoration: underline;
+    color: blue;
+    /*word-spacing: .5em;*/
+}
+
+
+.extremum-slide{
+    font-family: Montserrat;
+    width: 40%;
+    height: 30%;
+    border-radius: 10px;
+    border: none;
+    border-width: 3px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-left: 2em;
+    display: none;
+    margin: 1%;
+}
+
+fieldset{
+    border-radius: 10px;
+    border:  #51BDED;
+}
+
+p{
+    clear: both;
+    text-align: right;
+}
+
+label{
+    float: left;
+    padding-right: 1em;
+}
+
+
+.fields{
+    border-radius: 10px;
+    border: 1px solid transparent;
+    background-color: transparent;
+    text-align: right;
+    font-family: Montserrat;
+
+}
+
+.fields:focus{
+    border: 1px solid #51BDED;
+    background-color: #fff;
+    outline: none;
+}
+
+.buttons{
+    justify-content: space-between;
+}
+
+button{
+    background-color: #1387BB;
+    color: white;
+    padding: 16px;
+    border: none;
+    border-radius: 10px;
+    padding-right: 2em;
+    font-family: Montserrat;
+    text-align: center;
+    align-self: right;
+}
+
+.red{
+    border: none;
+}
+
+li{
+    text-decoration: none;
+}
+
+.hide{
+    display: none;
+}
+
+.search{
+    border: solid #51BDED;
+    border-radius: 10px;
+    border-width: 3px;
+    width: 80%;
+    height: 1.5em;
+    margin-right: 1em;
+    margin-left: 1em;
+    margin-top: 0.2em;
+    font-family: Montserrat;
+    margin-bottom: auto;
+}
+
+.search:focus{
+outline: none;
+}
+
 .searcher{
-    padding: 0.5em;
-    margin: 0.5em;
+    display: inline-flex;
+    width: 100%;
+    margin: 1%;
 }
 
-.searchtext { 
-    font-size: 16px; 
-    font-weight: bold; 
-    height: 27px; 
-    padding: 0 6px 0; 
-    width: 250px;
-    border: 1px solid rgba(0, 0, 0, 0.1); 
+img{
+    height: 2em ;
+    width: 2em;
+    position: relative;
 }
-    .highlight { 
-        background: #4CFF00; 
-    } 
-    
-    .search-button { 
-        background-color: #0B2F3F; 
-        font-weight: bold; 
-        font-size: 12px;
-        height: 28px; 
-        margin: 0; 
-        color: #ffffff; 
-        padding: 6px; 
-        border: 1px solid rgba(0, 0, 0, 0.1);
-    }
-
-
-
-
