--- a/Frontend/css/registration.css
+++ b/Frontend/css/registration.css
@@ -5,35 +5,36 @@
     src: local(''),
          url('../fonts/montserrat-v15-latin_cyrillic-300.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/montserrat-v15-latin_cyrillic-300.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
+  }
   /* montserrat-regular - latin_cyrillic */
-@font-face {
+  @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     src: local(''),
          url('../fonts/montserrat-v15-latin_cyrillic-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/montserrat-v15-latin_cyrillic-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
+  }
   /* montserrat-700 - latin_cyrillic */
-@font-face {
+  @font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
     src: local(''),
          url('../fonts/montserrat-v15-latin_cyrillic-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
          url('../fonts/montserrat-v15-latin_cyrillic-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-}
+  }
 
-html{
-    box-sizing: border-box;
-}
+  html{
+      box-sizing: border-box;
+  }
 
-*, *::before, *after { 
+  *, *::before, *after { 
     box-sizing: inherit;
 }
 
-body{
+
+body {
     font-family: Montserrat;
     font-style: normal;
     font-size: 18px;
@@ -42,13 +43,21 @@ body{
     color: #000;
 }
 
+form{
+    text-align: center;
+}
+
 header{
-    height: 5%;
+    background-color: #51BDED;
+
     display: flex;
     flex-wrap: wrap;
     align-items: flex-end;
     justify-content: space-between;
-    background-color: #51BDED;
+}
+
+li{
+    list-style-type: none;
 }
 
 .name_page{
@@ -59,34 +68,49 @@ header{
     margin-right: 2em;
 }
 
-.searcher{
-    padding: 0.5em;
-    margin: 0.5em;
+button{
+    font-family: Montserrat;
+    background-color: #1387BB;
+    border-radius: 10px;
+    border-color: #1387BB;
+    justify-content: center;
+    margin-top: 1%;
+    padding-bottom: 0.5em;
 }
 
-.searchtext { 
-    font-size: 16px; 
-    font-weight: bold; 
-    height: 27px; 
-    padding: 0 6px 0; 
-    width: 250px;
-    border: 1px solid rgba(0, 0, 0, 0.1); 
+input{
+    border: solid #51BDED;
+    border-radius: 10px;
+    border-width: 3px;
+    width: 80%;
+    height: 1.5em;
+    font-family: Montserrat;
+    margin-bottom: auto;
+    border-radius: 10px;
 }
-    .highlight { 
-        background: #4CFF00; 
-    } 
-    
-    .search-button { 
-        background-color: #0B2F3F; 
-        font-weight: bold; 
-        font-size: 12px;
-        height: 28px; 
-        margin: 0; 
-        color: #ffffff; 
-        padding: 6px; 
-        border: 1px solid rgba(0, 0, 0, 0.1);
-    }
 
+button:focus{
+    outline: none;
+}
 
+input:focus{
+    outline: none;
+    justify-self: flex-end;
+}
 
+fieldset{
+    display: flex table-column;
+    border-radius: 10px;
+    border: solid #1387BB;
+    margin: 1em;
+}
 
+p{
+    clear: both;
+    text-align: right;
+}
+
+label{
+    float: left;
+    padding-right: 1em;
+}
