--- a/ElectronicReports/Frontend/css/program.css
+++ b/ElectronicReports/Frontend/css/program.css
@@ -109,14 +109,53 @@ button:hover{
     background-color: #2980B9;
 }
 
-.links{
-    margin: 2em;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-row-end: 3;
 
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+.dropbtn {
+    background-color: #1387BB;
+    color: white;
+    padding: 16px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+
+    font-family: Montserrat;
+    font-style: normal;
+    font-size: 16px;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+    background-color: #2980B9;
+    outline: none;
+}
+
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+.dropdown a:hover {background-color: #8BDBFF;}
+
+.dropdown-content a:hover{
+    background-color: #8BDBFF;
+}
+
+.show{
+    display: block;
 }
