--- a/Frontend/css/registration.css
+++ b/Frontend/css/registration.css
@@ -138,3 +138,21 @@ label{
     text-align: left;
 }
 
+
+select{
+    border: solid #51BDED;
+    border-radius: 10px;
+    border-width: 3px;
+    width: 80%;
+    height: 3em;
+    font-family: Montserrat;
+    border-radius: 10px;
+    outline: none;
+    margin-bottom: 2em;
+    margin-top: -2.5em; 
+}
+
+option{
+    font-family: Montserrat;
+    margin-bottom: auto;
+}
