--- a/ElectronicReports/Frontend/css/childrenList.css
+++ b/ElectronicReports/Frontend/css/childrenList.css
@@ -29,7 +29,7 @@ html{
     box-sizing: border-box;
 }
 
-*, *::before, *after { 
+*, *::before, *after {
     box-sizing: inherit;
 }
 
@@ -68,7 +68,21 @@ li{
 
 .extremum-slide{
     font-family: Montserrat;
-    width: 40%;
+    width: 60%;
+    height: 30%;
+    border-radius: 10px;
+    border: none;
+    border-width: 3px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    margin-left: 2em;
+    display: none;
+    margin: 1%;
+}
+
+.extremum-slide1{
+    font-family: Montserrat;
+    width: 45%;
     height: 30%;
     border-radius: 10px;
     border: none;
@@ -115,18 +129,6 @@ label{
     justify-content: space-between;
 }
 
-button{
-    background-color: #1387BB;
-    color: white;
-    padding: 16px;
-    border: none;
-    border-radius: 10px;
-    padding-right: 2em;
-    font-family: Montserrat;
-    text-align: center;
-    align-self: right;
-}
-
 .red{
     border: none;
 }
@@ -162,8 +164,88 @@ outline: none;
     margin: 1%;
 }
 
+.searcher1{
+    display: inline-flex;
+    width: 100%;
+    margin: 3%;
+
+}
+
+.search1{
+    border: solid #51BDED;
+    border-radius: 10px;
+    border-width: 3px;
+    width: 50%;
+    height: 1.5em;
+    margin-right: 2em;
+    margin-left: 1em;
+    margin-top: 0.8em;
+    font-family: Montserrat;
+    margin-bottom: auto;
+    outline: none;
+
+}
+
+#add1{
+    width: 15em;
+    margin-right: 3em;
+}
+
+#delGroup{
+    width: 15em;
+    margin-left: 3em;
+}
+
 img{
     height: 2em ;
     width: 2em;
     position: relative;
+}
+
+.warn-window{
+    position: fixed;
+    left: 45%;
+    justify-content: center;
+    align-items: center;
+
+    width: 20em;
+    text-align: center;
+    font-size: 14px;
+    display: none;
+
+    border-radius: 10px;
+    border: #1387BB solid;
+    border-width: 3px;
+
+}
+
+button{
+  background-color: #1387BB;
+  color: white;
+  padding: 16px;
+  border: none;
+  border-radius: 10px;
+  padding-right: 2em;
+  font-family: Montserrat;
+  text-align: center;
+  align-self: right;
+    outline: none;
+    margin-left: 1em;
+}
+
+.quest{
+width: 18em;
+text-align: center;
+}
+
+.buttons{
+    align-content: space-between;
+    justify-content: center;
+    margin-bottom: 0.25em;
+}
+
+#yes{
+    margin-right: 1.5em;
+    text-align: right;
+
 }
